--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ remote_theme: raviriley/agency-jekyll-theme
 url    : "" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "/dsmgmt" # the subpath of your site, e.g. /blog
 
-title      : Agency Jekyll Theme Demo
-email      : your-email@example.com #this is also the email contact forms will go to
-description: "Agency Bootstrap theme converted to a Jekyll theme, plus new features: Google Analytics, Markdown support, custom pages, and more!"
-author     : Your Name
+title      : A DataHack Project
+email      : contact.datahack@gmail.com  #this is also the email contact forms will go to
+description: "A DataNights program dedicated to data science team leaders!"
+author     : Shay Palachy-Affek
 # logo:     #optional, defaults to site title
   # path: assets\img\clients\creative-market.jpg
   # height: 60 #height in px, defaults to 52px
