--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -29,10 +29,10 @@ en: &DEFAULT_EN
         desc: "Please [fill this form](https://forms.gle/Kg2JG2P3ffRfQWd57){:target='\_blank'} if you’d like to consider hosting the next cohort, or mail us at [contact.datahack@gmail.com](mailto:contact.datahack@gmail.com)."
         icon: fas fa-building
 
-
-  portfolio:
+  about:
     title: "About The Program"
-    text: "Our team management program is meant to help both new and aspiring managers heading data science teams in tackling the challenges facing them. We focus on methodolgies and frameworks that deal with the unique challenges of a data science team - addressing all the points in which software development methodologies stop making sense for us."
+    body: "Our team management program is meant to help both new and aspiring managers heading data science teams in tackling the challenges facing them. We focus on methodolgies and frameworks that deal with the unique challenges of a data science team - addressing all the points in which software development methodologies stop making sense for us."
+    section: about
 
 
   team:
@@ -90,16 +90,14 @@ en: &DEFAULT_EN
   footer:
     legal: "Privacy Policy"
     social:
-      - url: https://twitter.com
+      - url: https://twitter.com/DataHackIL
         icon: "fab fa-twitter"
-      - url: https://facebook.com
+      - url: https://www.facebook.com/datahackil/
         icon: "fab fa-facebook-f"
-      - url: https://linkedin.com
+      - url: https://www.linkedin.com/company/datanights/
         icon: "fab fa-linkedin-in"
-      - url: https://github.com/raviriley/agency-jekyll-theme
+      - url: https://github.com/dataHackIL/
         icon: "fab fa-github"
-      - url: https://instagram.com
-        icon: "fab fa-instagram"
 en-US:
   <<: *DEFAULT_EN
 en-CA:
