more content update

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -37,8 +37,7 @@ en: &DEFAULT_EN
 
   team:
     title: "OUR TEAM"
-    text: "Lorem ipsum dolor sit amet consectetur."
-    subtext: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde. **Markdown** supported.
+    text: "The people behind the program"
     section: team
     people:
       - name: "Gal Hever"
@@ -68,7 +67,7 @@ en: &DEFAULT_EN
 
   contact:
     title: "Contact Us"
-    text: "Lorem ipsum or call 123456789"
+    text: ""
     section: contact
     name: "Name*"
     name-validation: "Please enter your name."
